--- a/package.json
+++ b/package.json
@@ -5,22 +5,34 @@
   "author": "pengyuhuang",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_ENV=development nodemon server/index.js --watch server babel",
+    "dev": "cross-env NODE_ENV=development nodemon server/index.js --exec babel-node --watch server",
     "build": "nuxt build",
     "start": "cross-env NODE_ENV=production node server/index.js",
     "generate": "nuxt generate"
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.0.0",
+    "axios": "^0.18.0",
     "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015": "^6.24.1",
     "cross-env": "^5.2.0",
     "element-ui": "^2.4.6",
     "koa": "^2.5.2",
+    "koa-bodyparser": "^4.2.1",
+    "koa-generic-session": "^2.0.1",
+    "koa-json": "^2.0.2",
+    "koa-passport": "^4.1.1",
+    "koa-redis": "^3.1.3",
+    "koa-router": "^7.4.0",
+    "mongoose": "^5.4.17",
     "node-sass": "^4.11.0",
+    "nodemailer": "^5.1.1",
     "nuxt": "^2.0.0",
+    "passport-local": "^1.0.0",
     "sass-loader": "^7.1.0"
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
     "nodemon": "^1.11.0"
   }
 }
