--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "koa-passport": "^4.1.1",
     "koa-redis": "^3.1.3",
     "koa-router": "^7.4.0",
+    "moment": "^2.24.0",
+    "moment-locales-webpack-plugin": "^1.0.7",
     "mongoose": "^5.4.17",
     "node-sass": "^4.11.0",
     "nodemailer": "^5.1.1",
