--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "koa-passport": "^4.1.1",
     "koa-redis": "^3.1.3",
     "koa-router": "^7.4.0",
+    "koa2-cors": "^2.0.6",
     "moment": "^2.24.0",
     "mongoose": "^5.4.17",
     "node-sass": "^4.11.0",
