--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "moment": "^2.24.0",
     "mongoose": "^5.4.17",
     "node-sass": "^4.11.0",
+    "node-schedule": "^1.3.2",
     "nodemailer": "^5.1.1",
     "nuxt": "^2.0.0",
     "passport-local": "^1.0.0",
