--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "nodemailer": "^5.1.1",
     "nuxt": "^2.0.0",
     "passport-local": "^1.0.0",
+    "qrcodejs2": "0.0.2",
     "sass-loader": "^7.1.0",
     "vue-amap": "^0.5.8"
   },
